# applypilot.ai

./: .gitignore  AGENTS.md  PROJECT_MAP.md  README.md  package.json  pyproject.toml
.github/workflows/: deploy-github-pages.yml  vercel-deploy.yml  web-ci.yml
scripts/: zip-project.sh
src/applypilot/: __init__.py  domain.py
src/applypilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_domain.py
web/: AGENTS.md  Dockerfile  README.md  next.config.ts  package-lock.json
web/src/app/: layout.tsx  page.tsx
